--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -5,12 +5,41 @@
 
 This release removes index deployment downtime and adds new task management features. It also introduces new search parameters that facilitate the creation of numbered pagination interfaces.
 
-Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fantastic Meilisearch community. You were more present than ever and words cannot make justice tojust  how grateful we are for your support. A big thank you from the whole Meilisearch team! ❤️ 
+Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fantastic Meilisearch community. You were more present than ever and words cannot make justice tojust  how grateful we are for your support. A big thank you from the whole Meilisearch team! ❤️
 
 <!-- The following line should NOT be put in the official release changelogs -->
 📖 Meilisearch's official documentation will be ready for the official v0.30.0 release. Meanwhile, work-in-progress documentation is available [here]().
 
 # New features and improvements 🔥
+
+## Ease search results navigation with pagination
+
+You can now navigate through page selection when searching with Meilisearch using the API. This way, you will get the exact total number of pages and results Meilisearch has matched based on a query.
+
+For this, use `page` and `hitsPerPage` as query parameter instead of `offset` and `limit`:
+
+```bash
+curl \
+  -X POST 'http://localhost:7700/indexes/movies/search' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{ "q": "shifu", "page": "2", "hitsPerPage": "10" }'
+
+```
+
+```json
+{
+    "hits": [
+        /// ... 10 hits
+    ],
+    /// ... other fields
+    "page": 2,
+    "hitsPerPage": 10,
+    "totalHits": 2100,
+    "totalPages": 210
+}
+```
+
+Done in #2601 by @ManyTheFish.
 
 ## Cancel processing and enqueued tasks
 
