--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -189,6 +189,7 @@ TBD
 
 * Rename `receivedDocumentIds` into `matchedDocuments` in the task object when performing a [`delete-batch` action](https://docs.meilisearch.com/reference/api/documents.html#delete-documents-by-batch) (#2826) @Ugzuzg
 * Change default bind address from `127.0.0.1` to `localhost`, making the default address available in IPv4 and IPv6 (#2861) @Fall1ngStar
+* Return a new error when using `/keys` without any master key set: `missing_master_key` instead of `invalid_api_key` (#2922) @vishalsodani
 
 # Fixes 🐞
 
@@ -224,6 +225,6 @@ TBD
 * Make Clippy happy (#2831) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @AM1TB, @AnirudhDaya, @arriven, @choznerol, @Fall1ngStar, @Himanshu664, @jeertmans, @jirutka, @kianmeng, @mlemesle, @mou, @nfsec, @nontw, @onyxcherry, @Ugzuzg and @washbin.
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @AM1TB, @AnirudhDaya, @arriven, @choznerol, @Fall1ngStar, @Himanshu664, @jeertmans, @jirutka, @kianmeng, @mlemesle, @mou, @nfsec, @nontw, @onyxcherry, @Ugzuzg, vishalsodani and @washbin.
 - [Milli](https://github.com/meilisearch/milli): @anirudhRowjee, @ehiggs, @jeertmans, @msvaljek, @vincent-herlemont, and @vishalsodani.
 - [Charabia](https://github.com/meilisearch/charabia): TBD.
