--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -170,7 +170,7 @@ curl https://raw.githubusercontent.com/meilisearch/meilisearch/main/config.toml 
 <!-- The following line should be put in the official release changelogs only -->
 Read more about [customizing Meilisearch with a configuration file]().
 
-Done in #2745, #2928, #2804, and #2841 by @mlemesle, @choznerol, @arriven and @curquiza
+Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arriven, @LunarMarathon and @curquiza,
 
 ## Language improvements
 
@@ -225,6 +225,6 @@ TBD
 * Make Clippy happy (#2831) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @AM1TB, @AnirudhDaya, @arriven, @choznerol, @Fall1ngStar, @Himanshu664, @jeertmans, @jirutka, @kianmeng, @mlemesle, @mou, @nfsec, @nontw, @onyxcherry, @Ugzuzg, vishalsodani and @washbin.
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @AM1TB, @AnirudhDaya, @arriven, @choznerol, @Fall1ngStar, @Himanshu664, @jeertmans, @jirutka, @kianmeng, @LunarMarathon, @mlemesle, @mou, @nfsec, @nontw, @onyxcherry, @Ugzuzg, vishalsodani and @washbin.
 - [Milli](https://github.com/meilisearch/milli): @anirudhRowjee, @ehiggs, @jeertmans, @msvaljek, @vincent-herlemont, and @vishalsodani.
 - [Charabia](https://github.com/meilisearch/charabia): TBD.
