--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -23,7 +23,6 @@ curl \
   -X POST 'http://localhost:7700/indexes/movies/search' \
   -H 'Content-Type: application/json' \
   --data-binary '{ "q": "shifu", "page": "2", "hitsPerPage": "10" }'
-
 ```
 
 ```json
@@ -178,8 +177,8 @@ TBD
 
 ## Other improvements
 
-* Full support for compressed API requests (Gzip, Brotli, Zlib)  (#2876) @mou
-* Significant indexing speed improvements (meilisearch/milli#639 and meilisearch/milli#619) @loiclec
+* Full support for compressed API requests (Gzip, Brotli, Zlib) (#2876) @mou
+* Significant indexing speed improvements (#2763, meilisearch/milli#639, meilisearch/milli#619) @loiclec
 * Provide Apple Silicon binaries (#2837) @jeertmans
 * Add missing environment variables for dump and snapshot features (#2738) @gmourier
 * Increase max concurrent readers from 126 to 1024 (#2830) @arriven
