--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -112,7 +112,7 @@ Done in #2763 by @irevoire, @Kerollmops, and @loiclec.
 
 ## Remove downtime: swap indexes
 
-When doing important changes on a primary data store, you need them to be synchronized with Meilisearch. To avoid any downtime, Meilisearch now provides a seamless way to point to a new up-to-date index: swapping indexes.
+Deploy new indexes version with zero downtime to the search clients. Meilisearch now provides a seamless way to deploy multiple indexes atomically with the new swap indexes API.
 
 To swap indexes, use the new `/swap-indexes` route:
 
