--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -110,7 +110,7 @@ Read more about [deleting finished tasks]().
 
 Done in #2763 by @irevoire, @Kerollmops, and @loiclec.
 
-## Remove downtime: swap indexes
+## Deploy indexes with zero downtime
 
 Deploy new indexes version with zero downtime to the search clients. Meilisearch now provides a seamless way to deploy multiple indexes atomically with the new swap indexes API.
 
