--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -79,7 +79,13 @@ Done in #2763 by @irevoire, @Kerollmops and @loiclec.
 
 This release introduces a new `DELETE` endpoint to the `/tasks` route. You can use it to remove finished tasks (`succeeded`, `failed` or `canceled`) from Meilisearch's task history. This can be helpful in reducing the amount of occupied disk space.
 
-To delete a finished task, select it by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`. You can also select a task by date using one of the following query parameters: `afterEnqueuedAt`, `afterStartedAt`, `afterFinishedAt`, `beforeEnqueuedAt`,`beforeStartedAt`, or `beforeFinishedAt`.
+To delete finished tasks, filter them by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`.
+
+Tasks can be filtered by date fields:
+
+- `beforeEnqueuedAt` / `afterEnqueuedAt`
+- `beforeStartedAt` / `afterStartedAt`
+- `beforeFinishedAt` / `afterFinishedAt`
 
 For example, to delete tasks by `uid`:
 
