--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -44,7 +44,13 @@ Done in #2601 by @ManyTheFish.
 
 Meilisearch now allows you to cancel `enqueued` or `processing` tasks through a new API route, `/tasks/cancel`. This can be useful when you need to interrupt a process that is taking too much time to be completed.
 
-To cancel a task, select it by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`. You can also select a task by date using one of the following query parameters: `afterEnqueuedAt`, `afterStartedAt`, `afterFinishedAt`, `beforeEnqueuedAt`,`beforeStartedAt`, or `beforeFinishedAt`.
+To cancel tasks, filters them by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`. 
+
+Tasks can be filtered by date fields: 
+- `beforeEnqueuedAt` / `afterEnqueuedAt`
+- `beforeStartedAt` / `afterStartedAt`
+- `beforeFinishedAt` / `afterFinishedAt`
+
 
 For example, to cancel tasks by `uid`:
 
