--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -81,7 +81,7 @@ Read more about [cancelling tasks]().
 
 Done in #2763 by @irevoire, @Kerollmops and @loiclec.
 
-## Delete old processed tasks
+## Delete the task history
 
 This release introduces a new `DELETE` endpoint to the `/tasks` route. You can use it to remove finished tasks (`succeeded`, `failed` or `canceled`) from Meilisearch's task history. This can be helpful in reducing the amount of occupied disk space.
 
