--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -73,7 +73,7 @@ To cancel all enqueued tasks across all indexes in an instance:
 
 ```bash
 curl \
-  -X POST 'http://localhost:7700/tasks/cancel?status=processing,enqueued'
+  -X POST 'http://localhost:7700/tasks/cancel?status=enqueued'
 ```
 
 <!-- The following line should be put in the official release changelogs only -->
