--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -14,9 +14,9 @@ Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fan
 
 ## Ease search results navigation with pagination
 
-You can now navigate through page selection when searching with Meilisearch using the API. This way, you will get the exact total number of pages and results Meilisearch has matched based on a query.
+You can now use `page` and `hitsPerPage` to fetch the total number of pages and results for a query. These new search parameters can be used in the place of `offset` and `limit` when creating interfaces that require knowing the exhaustive number of search results.
 
-For this, use `page` and `hitsPerPage` as query parameter instead of `offset` and `limit`:
+The following example fetches the second page of results for a given query:
 
 ```bash
 curl \
