Change after review

--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -42,11 +42,11 @@ Done in #2601 by @ManyTheFish.
 
 ## Cancel processing and enqueued tasks
 
-Meilisearch now allows you to cancel `enqueued` or `processing` tasks through a new API route, `/tasks/cancel`. This can be useful when you need to interrupt a process that is taking too much time to be completed.
+Meilisearch now allows you to cancel `enqueued` or `processing` tasks through a new API route, `/tasks/cancel`. This can be useful when you need to interrupt a task that is taking too much time to be completed or enqueued by mistake.
 
-To cancel tasks, filters them by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`. 
+To cancel tasks, filters them by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`.
 
-Tasks can be filtered by date fields: 
+Tasks can be filtered by date fields:
 - `beforeEnqueuedAt` / `afterEnqueuedAt`
 - `beforeStartedAt` / `afterStartedAt`
 - `beforeFinishedAt` / `afterFinishedAt`
@@ -88,7 +88,6 @@ This release introduces a new `DELETE` endpoint to the `/tasks` route. You can u
 To delete finished tasks, filter them by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`.
 
 Tasks can be filtered by date fields:
-
 - `beforeEnqueuedAt` / `afterEnqueuedAt`
 - `beforeStartedAt` / `afterStartedAt`
 - `beforeFinishedAt` / `afterFinishedAt`
