--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -12,7 +12,7 @@ Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fan
 
 # New features and improvements 🔥
 
-## Ease search results navigation with pagination
+## Improve search result navigation: create numbered pagination interfaces
 
 You can now use `page` and `hitsPerPage` to fetch the total number of pages and results for a query. These new search parameters can be used in the place of `offset` and `limit` when creating interfaces that require knowing the exhaustive number of search results.
 
