--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -193,6 +193,7 @@ TBD
 * Add missing environment variables for dump and snapshot features (#2738) @gmourier
 * Increase max concurrent readers from 126 to 1024 (#2830) @arriven
 * Reduce the size of the Meilisearch binary: allow excluding specialized tokenizations when building binaries (#2773) @jirutka
+* Introduce the `snapshotCreation` task type: snapshot tasks are added to the task list, for more transparency (#2763) @Kerollmops
 
 # Behavior changes ⚠️
 
