Fix contributor name

--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -223,7 +223,7 @@ TBD
 * Dependencies
   * Upgrade dependencies (#2847) @loiclec
   * Upgrade clap to 4.0 (#2851) @choznerol
-  * Upgrade to alpine 3.16 in Dockerfile (#2827) @nontw
+  * Upgrade to alpine 3.16 in Dockerfile (#2827) @nwnt
 * Documentation
   * Update internal CLI documentation (#2839) @jeertmans
   * Improve issue template to avoid support questions in Meilisearch issues (#2772) @curquiza
@@ -235,6 +235,6 @@ TBD
 * Make Clippy happy (#2831) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @AM1TB, @AnirudhDaya, @arriven, @choznerol, @Fall1ngStar, @Himanshu664, @jeertmans, @jirutka, @kianmeng, @LunarMarathon, @mlemesle, @mou, @nfsec, @nontw, @onyxcherry, @Ugzuzg, vishalsodani and @washbin.
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @AM1TB, @AnirudhDaya, @arriven, @choznerol, @Fall1ngStar, @Himanshu664, @jeertmans, @jirutka, @kianmeng, @LunarMarathon, @mlemesle, @mou, @nfsec, @nwnt, @onyxcherry, @Ugzuzg, @vishalsodani and @washbin.
 - [Milli](https://github.com/meilisearch/milli): @anirudhRowjee, @ehiggs, @jeertmans, @msvaljek, @vincent-herlemont, and @vishalsodani.
 - [Charabia](https://github.com/meilisearch/charabia): TBD.
