Add disk space improvement

--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -194,6 +194,7 @@ TBD
 * Increase max concurrent readers from 126 to 1024 (#2830) @arriven
 * Reduce the size of the Meilisearch binary: allow excluding specialized tokenizations when building binaries (#2773) @jirutka
 * Introduce the `snapshotCreation` task type: snapshot tasks are added to the task list, for more transparency (#2763) @Kerollmops
+* Reduce the size taken by Meilisearch on the disk space (#2763, meilisearch/milli#639) @loiclec
 
 # Behavior changes ⚠️
 
@@ -206,7 +207,7 @@ TBD
 * Improve error message when adding documents: replace a meaningless serde message (#2819) @onyxcherry
 * Fix `dumpCreation` tasks bug (#2890) @washbin
 * Don't panic when the error length is slightly over 100 (#2727) @onyxcherry
-* Fix phrase search bug (meilisearch/milli#639 and meilisearch/milli#647) @loiclec
+* Fix phrase search bug (#2763, meilisearch/milli#639 and meilisearch/milli#647) @loiclec
 * Fix filtering bug (meilisearch/milli#619) @loiclec
 * Fix `facetDistribution` when setting `maxFacetPerValue` if only a few documents are returned (meilisearch/milli#619) @loiclec
 
