--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -14,7 +14,9 @@ Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fan
 
 ## Improve search result navigation: exhaustive number of search results
 
-You can now use `page` and `hitsPerPage` to fetch the total number of pages and results for a query. These new search parameters can be used in the place of `offset` and `limit` when creating interfaces that require knowing the exhaustive number of search results.
+When paginating search results with `offset` and `limit`, Meilisearch only returns an estimate of the total number of results. Since `estimatedTotalHits` can change, creating reliable pagination interfaces with numbered page selectors is challenging.
+
+v0.30 introduces two new search parameters, `page` and `hitsPerPage`. Queries with these parameters return an exhaustive number of `totalHits` and `totalPages`, which you can then use to create UI elements such as numbered page selectors.
 
 The following example fetches the second page of results for a given query:
 
