Add the new filters for the GET /tasks

--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -189,6 +189,7 @@ TBD
 
 ## Other improvements
 
+* The fresh new filters are also availabe for the `GET /tasks`: `canceledBy`, `beforeEnqueuedAt`, `afterEnqueuedAt`, `beforeStartedAt`, `afterStartedAt`, `beforeFinishedAt`, `afterFinishedAt`.
 * Full support for compressed API requests (Gzip, Brotli, Zlib) (#2876) @mou
 * Significant indexing speed improvements (#2763, meilisearch/milli#639, meilisearch/milli#619) @loiclec
 * Provide Apple Silicon binaries (#2837) @jeertmans
