--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -200,6 +200,12 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 * Rename `receivedDocumentIds` into `matchedDocuments` in the task object when performing a [`delete-batch` action](https://docs.meilisearch.com/reference/api/documents.html#delete-documents-by-batch) (#2826) @Ugzuzg
 * Change default bind address from `127.0.0.1` to `localhost`, making the default address available in IPv4 and IPv6 (#2861) @Fall1ngStar
 * Return a new error when using `/keys` without any master key set: `missing_master_key` instead of `invalid_api_key` (#2922) @vishalsodani
+* Some names of filter parameters for `/tasks` and some error `code`s have been renamed (#3023) @Kerollmops @loiclec
+  - `indexUid` query parameter is renamed `indexUids`
+  - `type` query parameter is renamed `types`
+  - `status` query parameter is renamed `statuses`
+  - `invalid_task_type` error is renamed `invalid_task_types_filter`
+  - `invalid_task_status` error is renamed `invalid_task_statuses_filter`
 
 # Fixes 🐞
 
@@ -209,6 +215,12 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 * Fix phrase search bug (#2763, meilisearch/milli#639 and meilisearch/milli#647) @loiclec
 * Fix filtering bug (meilisearch/milli#619) @loiclec
 * Fix `facetDistribution` when setting `maxFacetPerValue` if only a few documents are returned (meilisearch/milli#619) @loiclec
+* Correct variant returned for `invalid_api_key_indexes` error when creating an API key (#3032) @ManyTheFish
+* Prevent phrase search containing stop words never retrieves any documents (#3036 and meilisearch/milli#664) @Samyak2 @Kerollmops
+* Add missing `IN`/`NOT IN` operators to the `invalid_filter` error message (#3036 and meilisearch/milli#676) @Pranav-yadav @Kerollmops
+* Prevent filtering by the value of "inf" or "infinity" to yield an internal error (#3036 and meilisearch/milli#689) @dureuill @Kerollmops
+* Prevent duplicate documents in the search route (#3036 and meilisearch/milli#690) @Kerollmops
+* Re-introduce missing key in the documents database (#3036 and meilisearch/milli#690) @Kerollmops
 
 # Misc
 
@@ -236,5 +248,5 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @AM1TB, @AnirudhDaya, @arriven, @choznerol, @Fall1ngStar, @Himanshu664, @jeertmans, @jirutka, @kianmeng, @LunarMarathon, @mlemesle, @mou, @nfsec, @nwnt, @onyxcherry, @Ugzuzg, @vishalsodani and @washbin.
-- [Milli](https://github.com/meilisearch/milli): @anirudhRowjee, @ehiggs, @jeertmans, @msvaljek, @vincent-herlemont, and @vishalsodani.
+- [Milli](https://github.com/meilisearch/milli): @anirudhRowjee, @ehiggs, @jeertmans, @msvaljek, @Pranav-yadav, @Samyak2, @vincent-herlemont, and @vishalsodani.
 - [Charabia](https://github.com/meilisearch/charabia): TBD.
