Update changelog following rc2

--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -197,7 +197,7 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 
 # Behavior changes ⚠️
 
-* Rename `receivedDocumentIds` into `matchedDocuments` in the task object when performing a [`delete-batch` action](https://docs.meilisearch.com/reference/api/documents.html#delete-documents-by-batch) (#2826) @Ugzuzg
+* Rename `receivedDocumentIds` into `providedIds` in the task object when performing a [`delete-batch` action](https://docs.meilisearch.com/reference/api/documents.html#delete-documents-by-batch) (#2826) @Ugzuzg
 * Change default bind address from `127.0.0.1` to `localhost`, making the default address available in IPv4 and IPv6 (#2861) @Fall1ngStar
 * Return a new error when using `/keys` without any master key set: `missing_master_key` instead of `invalid_api_key` (#2922) @vishalsodani
 * Some names of filter parameters for `/tasks` and some error `code`s have been renamed (#3023) @Kerollmops @loiclec
@@ -221,6 +221,9 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 * Prevent filtering by the value of "inf" or "infinity" to yield an internal error (#3036 and meilisearch/milli#689) @dureuill @Kerollmops
 * Prevent duplicate documents in the search route (#3036 and meilisearch/milli#690) @Kerollmops
 * Re-introduce missing key in the documents database (#3036 and meilisearch/milli#690) @Kerollmops
+* Don't remove DB if unreadable (#3077) @dureuill
+* Fix `MDB_BAD_VALSIZE` error (#3084 meilisearch/milli#696) @Kerollmops @loiclec
+* Prevent OS error 22 when creating indexes (#3084 meilisearch/milli#699) @Kerollmops @dureuill
 
 # Misc
 
@@ -232,6 +235,7 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
   * Update checkout v2 to v3 in CI manifests and use a unique GitHub PAT (#2740) @curquiza
   * Uncomment cache steps in Github CI (#2868) @AM1TB
   * Skip dashboard test if the mini-dashboard feature is disabled (#2814) @jirutka
+  * Use pre-compiled binaries for faster CI (meilisearch/milli#685) @azzamsa
 * Dependencies
   * Upgrade dependencies (#2847) @loiclec
   * Upgrade clap to 4.0 (#2851) @choznerol
@@ -245,8 +249,9 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 * Delete v1.rs since it is not included in project (#2834) @Himanshu664
 * Download-latest script: refactoring (#2913) @nfsec
 * Make Clippy happy (#2831) @Kerollmops
+* Improve debuggability by naming spawned threads (#3061) @dureuill
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @AM1TB, @AnirudhDaya, @arriven, @choznerol, @Fall1ngStar, @Himanshu664, @jeertmans, @jirutka, @kianmeng, @LunarMarathon, @mlemesle, @mou, @nfsec, @nwnt, @onyxcherry, @Ugzuzg, @vishalsodani and @washbin.
-- [Milli](https://github.com/meilisearch/milli): @anirudhRowjee, @ehiggs, @jeertmans, @msvaljek, @Pranav-yadav, @Samyak2, @vincent-herlemont, and @vishalsodani.
+- [Milli](https://github.com/meilisearch/milli): @anirudhRowjee, @azzamsa, @ehiggs, @jeertmans, @msvaljek, @Pranav-yadav, @Samyak2, @vincent-herlemont, and @vishalsodani.
 - [Charabia](https://github.com/meilisearch/charabia): TBD.
