--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -201,6 +201,7 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 * Change default bind address from `127.0.0.1` to `localhost`, making the default address available in IPv4 and IPv6 (#2861) @Fall1ngStar
 * Return a new error when using `/keys` without any master key set: `missing_master_key` instead of `invalid_api_key` (#2922) @vishalsodani
 * Some names of filter parameters for `/tasks` and some error `code`s have been renamed (#3023) @Kerollmops @loiclec
+  - `uid` query parameter is renamed `uids`
   - `indexUid` query parameter is renamed `indexUids`
   - `type` query parameter is renamed `types`
   - `status` query parameter is renamed `statuses`
