--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -46,7 +46,7 @@ Done in #2601 by @ManyTheFish.
 
 Meilisearch now allows you to cancel `enqueued` or `processing` tasks through a new API route, `/tasks/cancel`. This can be useful when you need to interrupt a task that is taking too much time to be completed or enqueued by mistake.
 
-To cancel tasks, filters them by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`.
+To cancel tasks, filter them by specifying one of the following query parameters: `uids`, `statuses`, `types`, or `indexUids`.
 
 Tasks can be filtered by date fields:
 - `beforeEnqueuedAt` / `afterEnqueuedAt`
