--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -57,7 +57,7 @@ For example, to cancel tasks by `uid`:
 
 ```bash
 curl \
-  -X POST 'http://localhost:7700/tasks/cancel?uid=1,2'
+  -X POST 'http://localhost:7700/tasks/cancel?uids=1,2'
 ```
 
 ```json
