--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -86,7 +86,7 @@ Done in #2763 by @irevoire, @Kerollmops and @loiclec.
 
 This release introduces a new `DELETE` endpoint to the `/tasks` route. You can use it to remove finished tasks (`succeeded`, `failed` or `canceled`) from Meilisearch's task history. This can be helpful in reducing the amount of occupied disk space.
 
-To delete finished tasks, filter them by specifying one of the following query parameters: `uid`, `status`, `type`, or `indexUid`.
+To delete finished tasks, filter them by specifying one of the following query parameters: `uids`, `statuses`, `types`, `indexUids`, or `canceledBy`.
 
 Tasks can be filtered by date fields:
 - `beforeEnqueuedAt` / `afterEnqueuedAt`
