--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -97,7 +97,7 @@ For example, to delete tasks by `uid`:
 
 ```bash
 curl \
-  -X DELETE 'http://localhost:7700/tasks?uid=1,2'
+  -X DELETE 'http://localhost:7700/tasks?uids=1,2'
 ```
 
 ```json
