--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -114,7 +114,7 @@ To delete all finished tasks in an instance:
 
 ```bash
 curl \
-  -X DELETE 'http://localhost:7700/tasks?status=failed,succeeded,canceled'
+  -X DELETE 'http://localhost:7700/tasks?statuses=failed,succeeded,canceled'
 ```
 
 <!-- The following line should be put in the official release changelogs only -->
