--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -218,7 +218,7 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 * Correct variant returned for `invalid_api_key_indexes` error when creating an API key (#3032) @ManyTheFish
 * Prevent phrase search containing stop words never retrieves any documents (#3036 and meilisearch/milli#664) @Samyak2 @Kerollmops
 * Add missing `IN`/`NOT IN` operators to the `invalid_filter` error message (#3036 and meilisearch/milli#676) @Pranav-yadav @Kerollmops
-* Prevent filtering by the value of "inf" or "infinity" to yield an internal error (#3036 and meilisearch/milli#689) @dureuill @Kerollmops
+* Filtering by "inf", "infinity", or "NaN" as numbers will yield an internal error (#3036 and meilisearch/milli#689) @dureuill @Kerollmops
 * Prevent duplicate documents in the search route (#3036 and meilisearch/milli#690) @Kerollmops
 * Re-introduce missing key in the documents database (#3036 and meilisearch/milli#690) @Kerollmops
 * Don't remove DB if unreadable (#3077) @dureuill
