--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -63,7 +63,7 @@ curl \
 ```json
 {
   "taskUid": 1,
-  "indexUid": "movies",
+  "indexUid": "null",
   "status": "enqueued",
   "type": "taskCancelation",
   "enqueuedAt": "2021-08-12T10:00:00.000000Z"
