Update following rc4

--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -223,6 +223,7 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 * Don't remove DB if unreadable (#3077) @dureuill
 * Fix `MDB_BAD_VALSIZE` error (#3084 meilisearch/milli#696) @Kerollmops @loiclec
 * Prevent OS error 22 when creating indexes (#3084 meilisearch/milli#699) @Kerollmops @dureuill
+* Display the `dumpUid` as `null` until we create it (#3122) @Kerollmops
 
 # Misc
 
@@ -235,6 +236,7 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
   * Uncomment cache steps in Github CI (#2868) @AM1TB
   * Skip dashboard test if the mini-dashboard feature is disabled (#2814) @jirutka
   * Use pre-compiled binaries for faster CI (meilisearch/milli#685) @azzamsa
+  * Refactorize the whole test suite (#3085) @irevoire
 * Dependencies
   * Upgrade dependencies (#2847) @loiclec
   * Upgrade clap to 4.0 (#2851) @choznerol
