Add missing content about task object

--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -193,6 +193,7 @@ Done in #2745, #2928, #2804, #2841,  and #2961 by @mlemesle, @choznerol, @arrive
 * Reduce the size of the Meilisearch binary: allow excluding specialized tokenizations when building binaries (#2773) @jirutka
 * Introduce the `snapshotCreation` task type: snapshot tasks are added to the task list, for more transparency (#2763) @Kerollmops
 * Reduce the size taken by Meilisearch on the disk space (#2763, meilisearch/milli#639) @loiclec
+* `canceledBy` and `error` fields are now always part of the `task` object (#2763) @irevoire, @Kerollmops, and @loiclec
 
 # Behavior changes ⚠️
 
