Update changelogs before official release

--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -7,6 +7,14 @@ This release introduces index deployment with zero downtime and adds task manage
 
 Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fantastic Meilisearch community. You were more present than ever, and words cannot do justice to just how grateful we are for your support. A big thank you from the whole Meilisearch team! ❤️
 
+<!-- The following lines should ONLY be put in the official release changelogs -->
+🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes this can take up to 48 hours, depending on the issues we encounter during the release.
+
+<!-- The following lines should ONLY be put in the official release changelogs -->
+Here is the exhaustive list of integrations  **not immediately compatible** with v0.30.0:
+- [meilisearch-dart](https://github.com/meilisearch/meilisearch-dart) and [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): though you can use still use both libraries with v0.30.0, the new available features are not yet available. Let us know if you really need it—and contributions are always welcome!
+- [meilisearch-java](https://github.com/meilisearch/meilisearch-java): Our team is still working on refactoring the code; this is reaching the end, but the SDK cannot be used with v0.30.0 yet. Follow the repository to know when it will be compatible.
+
 <!-- The following line should NOT be put in the official release changelogs -->
 📖 Meilisearch's official documentation will be ready for the official v0.30.0 release. Meanwhile, work-in-progress documentation is available [here]().
 
