--- a/meilisearch-release-changelog/v0.30.0.md
+++ b/meilisearch-release-changelog/v0.30.0.md
@@ -12,7 +12,7 @@ Thanks to Hacktoberfest, tons of updates and bug fixes have been done by the fan
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 Here is the exhaustive list of integrations  **not immediately compatible** with v0.30.0:
-- [meilisearch-dart](https://github.com/meilisearch/meilisearch-dart) and [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): though you can use still use both libraries with v0.30.0, the new available features are not yet available. Let us know if you really need it—and contributions are always welcome!
+- [meilisearch-dart](https://github.com/meilisearch/meilisearch-dart) and [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): though you can still use both libraries with v0.30.0, the new available features are not yet available. Let us know if you really need it—and contributions are always welcome!
 - [meilisearch-java](https://github.com/meilisearch/meilisearch-java): Our team is still working on refactoring the code; this is reaching the end, but the SDK cannot be used with v0.30.0 yet. Follow the repository to know when it will be compatible.
 
 <!-- The following line should NOT be put in the official release changelogs -->
