--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -145,8 +145,8 @@ The product roadmap related to the core team can be followed here: https://githu
   - [ ] We know Meilisearch can have bugs/crashes impacting the stability of the search engine in production. In the best world, the RAM consumption should be appropriate when indexing and searching. It means our priority during this quarter is to identify the different weaknesses of Meilisearch and make decision about them: being transparent with the users is the most important part to achieve if the problem cannot be solved by any implementation before v1.
   - [ ] Define more precisely what kind of distribution we support. Transparency is the key to this point. Then, we need to ensure we have tests/CIs appropriate to them.
   For example, what about the Debian 10 distribution? And what about Windows and the prioritization we should give to it? Indeed, all the features of Meilisearch do not work with Windows so far, like dumps. It's important to provide transparency about it.
-- [ ] Define our versioning policy process post v1
-- [ ] Define our beta/deprecated process post v1
+- [ ] Define our versioning policy process post v1 (see: https://github.com/meilisearch/meilisearch/issues/3191)
+- [ ] Define our beta/deprecated process post v1 (see https://github.com/meilisearch/meilisearch/issues/3193 and https://github.com/meilisearch/meilisearch/issues/3192)
 - [ ] Create some benchmarks of concrete use cases. We need to define the real objectives of the project, how to ensure to make it useful at the end. Create a Product Squad for it and manage it as a new feature of Meilisearch could be a good start.
 
 ### Team
