--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -3,7 +3,7 @@
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-We are proud to announce we are releasing the first stable release of Meilisearch! 🎉 This new release, contrary to v0.30.0, focus on stabilization instead of bringing a lot of new features. We took the opportunity to make the final touch regarding some breaking changes in the CLI but also in our error handler.
+We are proud to announce we are releasing the first major release of Meilisearch! 🎉 This new release, contrary to v0.30.0, focus on stabilization instead of bringing new features. We took the opportunity to make the final touch regarding breaking changes in the CLI and the error handler.
 Since Meilisearch is now stable, we will not introduce any new breaking changes in the future versions of Meilisearch until releasing v2.0.0. Here you have more information about what we consider [as breaking for Meilisearch](https://github.com/meilisearch/engine-team/blob/main/resources/versioning-policy.md).
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
