--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -55,7 +55,7 @@ This option was introduced in case of bug, and is not useful anymore since the f
 * Remove `--snapshot-interval-sec` and `--schedule-snapshot` now accepts an optional integer value specifying the interval in seconds (#3281) @dureuill
 * The `--log-level` option does not take any string to filter the logs anymore, but only accepts the following arguments: `ERROR`, `WARN`, `INFO`, `DEBUG`, `TRACE` and `OFF` (#3293) @loiclec
 
-## New primary key inference
+## Revamped primary key inference
 
 When receiving the documents for the first time, and if the `primaryKey` parameter is not present in the request, Meilisearch tries to infer the primary key.
 
