--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -26,7 +26,7 @@ TBD
 
 You can now activate the `--generate-master-key` CLI option when launching Meilisearch.
 
-This option is particular since it will not launch Meilisearhc but will generate a safe-to-use master key for Meilisearch and will exit without any error.
+This option is particular since it won't launch Meilisearch but will generate a safe-to-use master key for Meilisearch and will exit without any error.
 
 Done in #3274 by @dureuill
 
