--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -57,15 +57,15 @@ This option was introduced in case of bug, and is not useful anymore since the f
 
 ## Revamped primary key inference
 
-When receiving the documents for the first time, and if the `primaryKey` parameter is not present in the request, Meilisearch tries to infer the primary key.
+We have improved the primary key inference process when receiving documents for the first time.
 
-In this case, Meilisearch will first try to find any key in the document containing `id`, like `puid` or `_id`. If only one key is detected, this key will be considered as the primary key. The changing behavior is about detecting multiple keys containing `id`.
+If an index's primary key has not been specified earlier, Meilisearch will attempt to infer the primary key by searching for any properties ending with `id`, such as `puid` or` _id`. 
 
-Old behavior: if Meilisearch finds multiple keys containing `id`, it will consider the primary key as the first field in the document.
+If only one such key is detected, it will be designated as the index primary key.
 
-New behavior: to respect the JSON specification, if Meilisearch finds multiple keys containing `id`, it will now return an error. Indeed, there is no priority order in JSON documents.
+If multiple properties ending with `id` are detected, Meilisearch will notify you and ask you to specify the property representing the identifier of your documents instead of choosing the first found one.
 
-As previously, Meilisearch will throw an error is no key containing `id` are detected and if the `primaryKey` parameter is not present.
+If no primary key candidates are detected, Meilisearch will continue to throw an error as before.
 
 Done in meilisearch/milli#752 and #??? (TBD) by @dureuill
 
