--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -49,7 +49,7 @@ Since we are releasing v1.0.0, this is the last time we are introducing breaking
 * For security reasons, Meilisearch will now reject master keys that are less than 16 bytes (#3274) @dureuill
 * Remove `--max-index-size` and `--max-task-db` configuration options (#3278) @dureuill
 Indeed, these options did not include the real space Meilisearch takes on the disk and were not adapted to the user's needs.
-* Remove --disable-auto-batching CLI option (#3296) @loiclec
+* Remove `--disable-auto-batching` CLI option (#3296) @loiclec
 This option was introduced in case of bug, and is not useful anymore since the feature is mature enough.
 * Rename dump command from `--dumps-dir` to `--dump-dir` (#3175) @dureuill
 * Remove `--snapshot-interval-sec` and `--schedule-snapshot` now accepts an optional integer value specifying the interval in seconds (#3281) @dureuill
