--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -50,7 +50,7 @@ Since we are releasing v1.0.0, this is the last time we are introducing breaking
 * Remove `--max-index-size` and `--max-task-db` configuration options (#3278) @dureuill
 Indeed, these options did not include the real space Meilisearch takes on the disk and were not adapted to the user's needs.
 * Remove `--disable-auto-batching` CLI option (#3296) @loiclec
-This option was introduced in case of bug, and is not useful anymore since the feature is mature enough.
+This option was initially introduced as a workaround in case of a bug and is no longer useful since the feature has matured.
 * Rename dump command from `--dumps-dir` to `--dump-dir` (#3175) @dureuill
 * Remove `--snapshot-interval-sec` and `--schedule-snapshot` now accepts an optional integer value specifying the interval in seconds (#3281) @dureuill
 * The `--log-level` option does not take any string to filter the logs anymore, but only accepts the following arguments: `ERROR`, `WARN`, `INFO`, `DEBUG`, `TRACE` and `OFF` (#3293) @loiclec
