--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -67,7 +67,7 @@ If multiple properties ending with `id` are detected, Meilisearch will notify yo
 
 If no primary key candidates are detected, Meilisearch will continue to throw an error as before.
 
-Done in meilisearch/milli#752 and #??? (TBD) by @dureuill
+Done in meilisearch/milli#752 and #3269 by @dureuill
 
 ## Error handler changes
 
